; ModuleID = '/home/carl/AnghaBench/git/extr_chdir-notify.c_reparent_cb.c'
source_filename = "/home/carl/AnghaBench/git/extr_chdir-notify.c_reparent_cb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@trace_setup_key = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [27 x i8] c"setup: reparent %s to '%s'\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i8*, i8*, i8*)* @reparent_cb to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @reparent_cb(i8* %0, i8* %1, i8* %2, i8* %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i8**, align 8
  %10 = alloca i8*, align 8
  store i8* %0, i8** %5, align 8
  store i8* %1, i8** %6, align 8
  store i8* %2, i8** %7, align 8
  store i8* %3, i8** %8, align 8
  %11 = load i8*, i8** %8, align 8
  %12 = bitcast i8* %11 to i8**
  store i8** %12, i8*** %9, align 8
  %13 = load i8**, i8*** %9, align 8
  %14 = load i8*, i8** %13, align 8
  store i8* %14, i8** %10, align 8
  %15 = load i8*, i8** %10, align 8
  %16 = icmp ne i8* %15, null
  br i1 %16, label %18, label %17

17:                                               ; preds = %4
  br label %33

18:                                               ; preds = %4
  %19 = load i8*, i8** %6, align 8
  %20 = load i8*, i8** %7, align 8
  %21 = load i8*, i8** %10, align 8
  %22 = call i8* @reparent_relative_path(i8* %19, i8* %20, i8* %21)
  %23 = load i8**, i8*** %9, align 8
  store i8* %22, i8** %23, align 8
  %24 = load i8*, i8** %10, align 8
  %25 = call i32 @free(i8* %24)
  %26 = load i8*, i8** %5, align 8
  %27 = icmp ne i8* %26, null
  br i1 %27, label %28, label %33

28:                                               ; preds = %18
  %29 = load i8*, i8** %5, align 8
  %30 = load i8**, i8*** %9, align 8
  %31 = load i8*, i8** %30, align 8
  %32 = call i32 @trace_printf_key(i32* @trace_setup_key, i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str, i64 0, i64 0), i8* %29, i8* %31)
  br label %33

33:                                               ; preds = %17, %28, %18
  ret void
}

declare dso_local i8* @reparent_relative_path(i8*, i8*, i8*) #1

declare dso_local i32 @free(i8*) #1

declare dso_local i32 @trace_printf_key(i32*, i8*, i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
